traces/bug_132.txt
src/medit/vector.c:132: error: DEAD_STORE
  The value written to &scalemax (type double) is never used.
Showing all 1 steps of the trace


src/medit/vector.c:132:3: Write of unused value
130.     /* build list */
131.     scalemin = sc->dmax * SCALV;
132.     scalemax = 10.0*scalemin;
         ^
133.     mesh->mark++;
134.     glLineWidth(2.0);
